fix validator struct
